tests/policy-namespace/namespace-fail.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: hello
  name: team-z
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    projectId: pid12345
  name: team-y
---
apiVersion: v1
kind: Namespace
metadata:
  name: team-z-no-label
