tests/policy-namespace/namespace-success.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    projectId: pid12345
  name: team-x
